--- a/GCR.Web/Content/site.less
+++ b/GCR.Web/Content/site.less
@@ -1,4 +1,4 @@
-html {
+﻿html {
   background: #202020;
 }
 body {
@@ -6,7 +6,7 @@ body {
 }
 #body {
   background: transparent url(images/bottom.jpg) center bottom repeat-x;
-  position: relative;
+  position:relative;
 }
 #inner-body {
   min-height: 1200px;
@@ -19,15 +19,16 @@ body {
   min-height: 40px;
   background: #202020;
 }
+
 .border-vert {
-  background: url("images/content-border.gif") repeat-y scroll 317px 0 transparent;
+    background: url("images/content-border.gif") repeat-y scroll 317px 0 transparent;
 }
 .border-vert.a {
-  background-position: 280px 0;
+    background-position: 280px 0;
 }
 .border-vert.b {
-  background-position: 640px 0;
+    background-position: 640px 0;
 }
 .border-vert.c {
-  background-position: 400px 0;
+    background-position: 400px 0;
 }
