--- a/GCR.Web/Views/Home/Index.cshtml
+++ b/GCR.Web/Views/Home/Index.cshtml
@@ -1,45 +1,85 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-@section featured {
-    <section class="featured">
-        <div class="content-wrapper">
-            <hgroup class="title">
-                <h1>@ViewBag.Title.</h1>
-                <h2>@ViewBag.Message</h2>
-            </hgroup>
-            <p>
-                To learn more about ASP.NET MVC visit
-                <a href="http://asp.net/mvc" title="ASP.NET MVC Website">http://asp.net/mvc</a>.
-                The page features <mark>videos, tutorials, and samples</mark> to help you get the most from ASP.NET MVC.
-                If you have any questions about ASP.NET MVC visit
-                <a href="http://forums.asp.net/1146.aspx/1?MVC" title="ASP.NET MVC Forum">our forums</a>.
-            </p>
+<div class="row">
+        <div class="wrapper border-vert">
+          <article class="four columns offset-by-one alpha">
+            <h3>Goals</h3>
+            <ul class="list-1 p3">
+              <li><a href="#">Fusce euismod consequat ante</a></li>
+              <li><a href="#">Lorem ipsum dolor sit amet, conse</a></li>
+              <li><a href="#">Pellentesque sed dolor</a></li>
+              <li><a href="#">Aliquam congue fermentum nisl</a></li>
+              <li><a href="#">Mauris accumsan nulla</a></li>
+            </ul>
+            <h3 class="padd-1">Our Mission</h3>
+            <div class="p6">
+              <figure class="box-img"><img alt="" src="images/page2-img1.jpg "></figure>
+            </div>
+            <h5 class="p15">Ullam corporis suscipit lariosam
+              nisi ut aliquid ex ea commod.</h5>
+          </article>
+          <article class="eight columns offset-by-two">
+            <h3>History of the University</h3>
+            <div class="wrapper">
+              <figure class="img-indent box-img"><img alt="" src="images/page2-img2.jpg "></figure>
+              <h5 class="p3">Ullam corporis suscipit laboriosam
+                nisi ut aliquid ex ea commod.</h5>
+              <p>Nam elit magna, hendrerit sit amet, tincidunt ac, viverra sed, nulla. Donec porta diam eu massa. Quisque diam lorem, interdum vitae, dapibus ac, scelerisque vitae, pede. Donec eget tellus non erat lacinia fermentum. Donec in velit vel ipsum  pulvinar. Proin ullamcorpe.</p>
+              <p class="p3 p0">Nulla dui. Fusce feugiat malesuada odio. Morbi nunc odio, gravida at, cursus nec, luctus a, lorem. Maecenas tristique orci ac sem. Duis ultricies pharetra magna. Donec accumsan malesuada orci. Donec sit amet eros. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris fermentum dictum magna. Sed laoreet aliquam leo. Ut tellus dolor, dapibus eget, elementum vel, cursus eleifend, elit. Aenean auctor wisi et urna. Aliquam erat volutpat. Duis ac turpis. </p>
+              <div class="p6">
+                <figure class="img-indent-r box-img"><img alt="" src="images/page2-img3.jpg "></figure>
+                <p>Nam elit magna, hendrerit sit amet, tincidunt ac, viverra sed, nulla. Donec porta diam eu massa. Quisque diam lorem, interdum vitae.</p>
+                <p class="p1">Dapibus ac, scelerisque vitae, pede. Donec eget tellus non erat lacinia fermentum. Donec in velit vel ipsum auctor pulvinar. Proin ullamcorpe.
+                  auris accumsan nulla vel diam. </p>
+              </div>
+            </div>
+          </article>
         </div>
-    </section>
-}
-<h3>We suggest the following:</h3>
-<ol class="round">
-    <li class="one">
-        <h5>Getting Started</h5>
-        ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-        enables a clean separation of concerns and that gives you full control over markup
-        for enjoyable, agile development. ASP.NET MVC includes many features that enable
-        fast, TDD-friendly development for creating sophisticated applications that use
-        the latest web standards.
-        <a href="http://go.microsoft.com/fwlink/?LinkId=245151">Learn more…</a>
-    </li>
-
-    <li class="two">
-        <h5>Add NuGet packages and jump-start your coding</h5>
-        NuGet makes it easy to install and update free libraries and tools.
-        <a href="http://go.microsoft.com/fwlink/?LinkId=245153">Learn more…</a>
-    </li>
-
-    <li class="three">
-        <h5>Find Web Hosting</h5>
-        You can easily find a web hosting company that offers the right mix of features
-        and price for your applications.
-        <a href="http://go.microsoft.com/fwlink/?LinkId=245157">Learn more…</a>
-    </li>
-</ol>
+        <div class="padd-2">
+          <div class="border-vert b">
+            <div class="wrapper border-vert">
+              <article class="grid_6 prefix_1 alpha">
+                <h3>Our Profile</h3>
+                <div class="wrapper">
+                  <div class="dropcap">A.</div>
+                  <div class="overflow p">
+                    <p>Nam elit magna hendrerit sit amet
+                      tincidunt ac viverra sed nulla. </p>
+                  </div>
+                </div>
+                <div class="wrapper m4">
+                  <div class="dropcap">B.</div>
+                  <div class="overflow p">
+                    <p>Nam elit magna hendrerit sit amet
+                      tincidunt ac viverra sed nulla. </p>
+                  </div>
+                </div>
+                <div class="wrapper m4">
+                  <div class="dropcap">C.</div>
+                  <div class="overflow p">
+                    <p>Nam elit magna hendrerit sit amet
+                      tincidunt ac viverra sed nulla. </p>
+                  </div>
+                </div>
+              </article>
+              <article class="grid_6 prefix_2 ">
+                <h3>Useful Links</h3>
+                <ul class="list-1 p2">
+                  <li><a href="#">Fusce euismod consequat ante</a></li>
+                  <li><a href="#">Lorem ipsum dolor sit amet, conse</a></li>
+                  <li><a href="#">Pellentesque sed dolor</a></li>
+                  <li><a href="#">Aliquam congue fermentum nisl</a></li>
+                  <li><a href="#">Mauris accumsan nulla</a></li>
+                  <li><a href="#">Sed in lacus ut enim adipiscing</a></li>
+                  <li><a href="#">In pede mi, aliquet sit</a></li>
+                </ul>
+              </article>
+              <article class="grid_6 prefix_2 ">
+                <h3>Our Vision</h3>
+                <h5 class="p2">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia conse quuntur magni dolores eos qui ratione voluptatem sequi nesciunt neque porro.</h5>
+              </article>
+            </div>
+          </div>
+        </div>
+      </div>
