--- a/GCR.Web/Views/Home/Index.cshtml
+++ b/GCR.Web/Views/Home/Index.cshtml
@@ -2,21 +2,9 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="row">
-  <div class="error">
-          This is a &lt;div&gt; with the class <strong>.error</strong>. <a href="#">Link</a>.
-        </div>
-        <div class="notice">
-          This is a &lt;div&gt; with the class <strong>.notice</strong>. <a href="#">Link</a>.
-        </div>
-        <div class="info">
-          This is a &lt;div&gt; with the class <strong>.info</strong>. <a href="#">Link</a>.
-        </div>
-        <div class="success">
-          This is a &lt;div&gt; with the class <strong>.success</strong>. <a href="#">Link</a>.
-        </div>
+<div class="three row">
     <div class="wrapper eight border">
-        <article class="six columns offset-by-one alpha">
+        <div class="six columns offset-by-one alpha">
             <h2>Goals</h2>
             <ul class="list-1 p3">
                 <li><a href="#">Fusce euismod consequat ante</a></li>
@@ -28,23 +16,26 @@
             <h2 class="padd-1">Our Mission</h2>
             <div class="p6">
                 <figure class="box-img">
-                    <img alt="" src="images/page2-img1.jpg "></figure>
+                    <img alt="" src="images/page2-img1.jpg ">
+                </figure>
             </div>
             <h5 class="p15">Ullam corporis suscipit lariosam
               nisi ut aliquid ex ea commod.</h5>
-        </article>
-        <article class="fifteen columns offset-by-two">
+        </div>
+        <div class="fourteen columns offset-by-two omega">
             <h2>History of the University</h2>
             <div class="wrapper">
                 <figure class="img-indent box-img">
-                    <img alt="" src="images/page2-img2.jpg "></figure>
+                    <img alt="" src="images/page2-img2.jpg ">
+                </figure>
                 <h5 class="p3">Ullam corporis suscipit laboriosam
                 nisi ut aliquid ex ea commod.</h5>
                 <p>Nam elit magna, hendrerit sit amet, tincidunt ac, viverra sed, nulla. Donec porta diam eu massa. Quisque diam lorem, interdum vitae, dapibus ac, scelerisque vitae, pede. Donec eget tellus non erat lacinia fermentum. Donec in velit vel ipsum  pulvinar. Proin ullamcorpe.</p>
                 <p class="p3 p0">Nulla dui. Fusce feugiat malesuada odio. Morbi nunc odio, gravida at, cursus nec, luctus a, lorem. Maecenas tristique orci ac sem. Duis ultricies pharetra magna. Donec accumsan malesuada orci. Donec sit amet eros. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris fermentum dictum magna. Sed laoreet aliquam leo. Ut tellus dolor, dapibus eget, elementum vel, cursus eleifend, elit. Aenean auctor wisi et urna. Aliquam erat volutpat. Duis ac turpis. </p>
                 <div class="p6">
                     <figure class="img-indent-r box-img">
-                        <img alt="" src="images/page2-img3.jpg "></figure>
+                        <img alt="" src="images/page2-img3.jpg ">
+                    </figure>
                     <p>Nam elit magna, hendrerit sit amet, tincidunt ac, viverra sed, nulla. Donec porta diam eu massa. Quisque diam lorem, interdum vitae.</p>
                     <p class="p1">
                         Dapibus ac, scelerisque vitae, pede. Donec eget tellus non erat lacinia fermentum. Donec in velit vel ipsum auctor pulvinar. Proin ullamcorpe.
@@ -52,57 +43,110 @@
                     </p>
                 </div>
             </div>
-        </article>
+        </div>
     </div>
-    <div class="padd-2">
-        <div class="sixteen border">
-            <div class="eight border">
-                <article class="six columns offset-by-one alpha">
-                    <h2>Our Profile</h2>
-                    <div class="wrapper">
-                        <div class="dropcap">A.</div>
-                        <div class="overflow p">
-                            <p>
-                                Nam elit magna hendrerit sit amet
-                      tincidunt ac viverra sed nulla.
-                            </p>
-                        </div>
+</div>
+<div class="two row">
+    <div class="sixteen border">
+        <div class="eight border">
+            <div class="six columns offset-by-one alpha">
+                <h2>Our Profile</h2>
+                <div class="wrapper">
+                    <div class="dropcap">A.</div>
+                    <div class="overflow p">
+                        <p>
+                            Nam elit magna hendrerit sit amet
+                    tincidunt ac viverra sed nulla.
+                        </p>
                     </div>
-                    <div class="wrapper m4">
-                        <div class="dropcap">B.</div>
-                        <div class="overflow p">
-                            <p>
-                                Nam elit magna hendrerit sit amet
-                      tincidunt ac viverra sed nulla.
-                            </p>
-                        </div>
+                </div>
+                <div class="wrapper m4">
+                    <div class="dropcap">B.</div>
+                    <div class="overflow p">
+                        <p>
+                            Nam elit magna hendrerit sit amet
+                    tincidunt ac viverra sed nulla.
+                        </p>
                     </div>
-                    <div class="wrapper m4">
-                        <div class="dropcap">C.</div>
-                        <div class="overflow p">
-                            <p>
-                                Nam elit magna hendrerit sit amet
-                      tincidunt ac viverra sed nulla.
-                            </p>
-                        </div>
+                </div>
+                <div class="wrapper m4">
+                    <div class="dropcap">C.</div>
+                    <div class="overflow p">
+                        <p>
+                            Nam elit magna hendrerit sit amet
+                    tincidunt ac viverra sed nulla.
+                        </p>
                     </div>
-                </article>
-                <article class="six columns offset-by-two">
-                    <h2>Useful Links</h2>
-                    <ul class="list-1 p2">
-                        <li><a href="#">Fusce euismod consequat ante</a></li>
-                        <li><a href="#">Lorem ipsum dolor sit amet, conse</a></li>
-                        <li><a href="#">Pellentesque sed dolor</a></li>
-                        <li><a href="#">Aliquam congue fermentum nisl</a></li>
-                        <li><a href="#">Mauris accumsan nulla</a></li>
-                        <li><a href="#">Sed in lacus ut enim adipiscing</a></li>
-                        <li><a href="#">In pede mi, aliquet sit</a></li>
-                    </ul>
-                </article>
-                <article class="six columns offset-by-two">
-                    <h2>Our Vision</h2>
-                    <h5 class="p2">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia conse quuntur magni dolores eos qui ratione voluptatem sequi nesciunt neque porro.</h5>
-                </article>
+                </div>
+            </div>
+            <div class="six columns offset-by-two">
+                <h2>Useful Links</h2>
+                <ul class="list-1 p2">
+                    <li><a href="#">Fusce euismod consequat ante</a></li>
+                    <li><a href="#">Lorem ipsum dolor sit amet, conse</a></li>
+                    <li><a href="#">Pellentesque sed dolor</a></li>
+                    <li><a href="#">Aliquam congue fermentum nisl</a></li>
+                    <li><a href="#">Mauris accumsan nulla</a></li>
+                    <li><a href="#">Sed in lacus ut enim adipiscing</a></li>
+                    <li><a href="#">In pede mi, aliquet sit</a></li>
+                </ul>
+            </div>
+            <div class="six columns offset-by-two omega">
+                <h2>Our Vision</h2>
+                <h5 class="p2">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia conse quuntur magni dolores eos qui ratione voluptatem sequi nesciunt neque porro.</h5>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="one row">
+    <div class="sixteen border">
+        <div class="eight border">
+            <div class="six columns offset-by-one alpha">
+                <h2>Our Profile</h2>
+                <div class="wrapper">
+                    <div class="dropcap">A.</div>
+                    <div class="overflow p">
+                        <p>
+                            Nam elit magna hendrerit sit amet
+                    tincidunt ac viverra sed nulla.
+                        </p>
+                    </div>
+                </div>
+                <div class="wrapper m4">
+                    <div class="dropcap">B.</div>
+                    <div class="overflow p">
+                        <p>
+                            Nam elit magna hendrerit sit amet
+                    tincidunt ac viverra sed nulla.
+                        </p>
+                    </div>
+                </div>
+                <div class="wrapper m4">
+                    <div class="dropcap">C.</div>
+                    <div class="overflow p">
+                        <p>
+                            Nam elit magna hendrerit sit amet
+                    tincidunt ac viverra sed nulla.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="six columns offset-by-two">
+                <h2>Useful Links</h2>
+                <ul class="list-1 p2">
+                    <li><a href="#">Fusce euismod consequat ante</a></li>
+                    <li><a href="#">Lorem ipsum dolor sit amet, conse</a></li>
+                    <li><a href="#">Pellentesque sed dolor</a></li>
+                    <li><a href="#">Aliquam congue fermentum nisl</a></li>
+                    <li><a href="#">Mauris accumsan nulla</a></li>
+                    <li><a href="#">Sed in lacus ut enim adipiscing</a></li>
+                    <li><a href="#">In pede mi, aliquet sit</a></li>
+                </ul>
+            </div>
+            <div class="six columns offset-by-two omega">
+                <h2>Our Vision</h2>
+                <h5 class="p2">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia conse quuntur magni dolores eos qui ratione voluptatem sequi nesciunt neque porro.</h5>
             </div>
         </div>
     </div>
