--- a/GCR.Web/Content/Site.css
+++ b/GCR.Web/Content/Site.css
@@ -20,6 +20,13 @@ body {
 }
 #header {
   padding: 20px 0px 20px 0px;
+  position: relative;
+  width: 960px;
+  margin: 0 auto;
+}
+.container {
+  background-color: #ffffff;
+  padding: 40px 0 20px 0;
 }
 #footer {
   min-height: 40px;
@@ -34,10 +41,67 @@ h6 {
   font-family: 'Patua One', cursive;
   font-weight: normal;
 }
+div.nav {
+  background: none repeat scroll 0 0 #282828;
+  border: 1px solid #343434;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+}
+div.nav ul {
+  line-height: 1;
+}
+div.nav ul,
+.div.nav li {
+  list-style: none outside none;
+  margin: 0;
+  padding: 0;
+}
+div.nav li {
+  background: url('images/menu-border2.gif') no-repeat scroll 0 9px transparent;
+  float: left;
+  position: relative;
+  text-align: center;
+  width: 16.6%;
+}
+div.nav li.alpha {
+  background: none;
+}
+div.nav a {
+  color: #fafafa;
+  text-decoration: none;
+  display: block;
+  font-family: Arial, 'DejaVu Sans', 'Liberation Sans', Freesans, sans-serif;
+  font-size: 1.1em;
+  font-weight: bold;
+  padding: 20px 0 15px;
+  position: relative;
+}
+div.nav .highlite {
+  background-color: #0079ce;
+  height: 5px;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.4s;
+  -moz-transition: opacity 0.4s;
+  /* Firefox 4 */
+
+  -webkit-transition: opacity 0.4s;
+  /* Safari and Chrome */
+
+  -o-transition: opacity 0.4s;
+  /* Opera */
+
+}
+div.nav li:hover .highlite,
+div.nav li.on .highlite {
+  opacity: 1;
+  visibility: visible;
+}
 /* Styles for validation helpers
 -----------------------------------------------------------*/
 .field-validation-error {
-  color: #f00;
+  color: #8a1f11;
 }
 .field-validation-valid {
   display: none;
@@ -45,9 +109,9 @@ h6 {
 input.input-validation-error,
 select.input-validation-error {
   border-color: #f58282;
-  border-top-color: 74%;
-  border-left-color: 74%;
-  background-color: 86%;
+  border-top-color: #ed2424;
+  border-left-color: #ed2424;
+  background-color: #ffd9d9;
 }
 .validation-summary-errors ul {
   margin: 0;
@@ -93,7 +157,7 @@ div.alert {
 div.error a,
 div.alert a {
   color: #8a1f11;
-  font-weight: 600;
+  font-weight: 700;
 }
 div.notice a {
   color: #514721;
